--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "recharts": "^2.13.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
